Removed max. and min. time offset constraints as algorithm parameters and from all engines. The time constraints were added to the relevant terminal symbols (variable & differential) instead. The time offset constraint can be changed by editing the symbols in the function library.  #880 (Max and min time offsets for variable symbols are not set correctly by FunctionLibraryInjectors)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2843 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -111,6 +111,12 @@
       <DependentUpon>PredictorView.cs</DependentUpon>
     </Compile>
     <Compile Include="StandardGPRegression.cs" />
+    <Compile Include="Symbols\VariableView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Symbols\VariableView.Designer.cs">
+      <DependentUpon>VariableView.cs</DependentUpon>
+    </Compile>
     <Compile Include="VariableFrequencyAnalyser.cs" />
     <Compile Include="Symbols\Addition.cs" />
     <Compile Include="Symbols\And.cs" />
@@ -233,6 +239,9 @@
   <ItemGroup>
     <EmbeddedResource Include="PredictorView.resx">
       <DependentUpon>PredictorView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Symbols\VariableView.resx">
+      <DependentUpon>VariableView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
