--- a/sources/HeuristicLab.Security.Core/3.2/app.config
+++ b/sources/HeuristicLab.Security.Core/3.2/app.config
@@ -2,13 +2,19 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HeuristicLab.Security.Core.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="HeuristicLab.Security.Core.Properties.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
+        <HeuristicLab.Security.Core.Properties.Settings>
+            <setting name="SecurityServerConnectionString" serializeAs="String">
+                <value>Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Security;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true</value>
+            </setting>
+        </HeuristicLab.Security.Core.Properties.Settings>
         <HeuristicLab.Security.Core.Properties.Settings1>
             <setting name="SecurityServerConnectionString" serializeAs="String">
-                <value>Data Source=10.20.71.10;Initial Catalog=HeuristicLab.Security;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true</value>
+                <value>Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Security;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true</value>
             </setting>
         </HeuristicLab.Security.Core.Properties.Settings1>
     </applicationSettings>
