Operator architecture refactoring (#95)  * worked on algorithms
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2852 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
+++ b/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabParametersPlugin.cs.frame" />
+    <Compile Include="ConstrainedValueParameter.cs" />
     <Compile Include="LookupParameter.cs" />
     <Compile Include="SubScopesLookupParameter.cs" />
     <Compile Include="ValueLookupParameter.cs" />
