--- a/sources/HeuristicLab.SGA.Views/3.3/HeuristicLab.SGA.Views-3.3.csproj
+++ b/sources/HeuristicLab.SGA.Views/3.3/HeuristicLab.SGA.Views-3.3.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AE5B1CE5-9862-4D6F-A700-D72CD9AEA295}</ProjectGuid>
+    <ProjectGuid>{35A42EE0-A896-4D7A-A99F-8ED9E925F320}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Parameters.Views</RootNamespace>
-    <AssemblyName>HeuristicLab.Parameters.Views-3.3</AssemblyName>
+    <RootNamespace>HeuristicLab.SGA.Views</RootNamespace>
+    <AssemblyName>HeuristicLab.SGA.Views-3.3</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -31,24 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\HeuristicLab.Parameters.Views-3.3.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\HeuristicLab.Parameters.Views-3.3.XML</DocumentationFile>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
+    <DocumentationFile>bin\Release\HeuristicLab.SGA.Views-3.3.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -67,57 +50,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="HeuristicLabParametersViewsPlugin.cs.frame" />
-    <Compile Include="ConstrainedValueParameterView.cs">
+    <None Include="HeuristicLabSGAViewsPlugin.cs.frame" />
+    <Compile Include="SGAView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ConstrainedValueParameterView.Designer.cs">
-      <DependentUpon>ConstrainedValueParameterView.cs</DependentUpon>
+    <Compile Include="SGAView.Designer.cs">
+      <DependentUpon>SGAView.cs</DependentUpon>
     </Compile>
-    <Compile Include="ValueLookupParameterView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ValueLookupParameterView.Designer.cs">
-      <DependentUpon>ValueLookupParameterView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LookupParameterView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="LookupParameterView.Designer.cs">
-      <DependentUpon>LookupParameterView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="HeuristicLabParametersViewsPlugin.cs" />
-    <Compile Include="ParameterView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ParameterView.Designer.cs">
-      <DependentUpon>ParameterView.cs</DependentUpon>
-    </Compile>
+    <Compile Include="HeuristicLabSGAViewsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueParameterView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ValueParameterView.Designer.cs">
-      <DependentUpon>ValueParameterView.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="HeuristicLab.snk" />
-    <None Include="Properties\AssemblyInfo.frame" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
-      <Project>{958B43BC-CC5C-4FA2-8628-2B3B01D890B6}</Project>
-      <Name>HeuristicLab.Collections-3.3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\HeuristicLab.Common.Resources\3.2\HeuristicLab.Common.Resources-3.2.csproj">
-      <Project>{0E27A536-1C4A-4624-A65E-DC4F4F23E3E1}</Project>
-      <Name>HeuristicLab.Common.Resources-3.2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\HeuristicLab.Common\3.2\HeuristicLab.Common-3.2.csproj">
-      <Project>{1FC004FC-59AF-4249-B1B6-FF25873A20E4}</Project>
-      <Name>HeuristicLab.Common-3.2</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Core.Views\3.3\HeuristicLab.Core.Views-3.3.csproj">
       <Project>{E226881D-315F-423D-B419-A766FE0D8685}</Project>
       <Name>HeuristicLab.Core.Views-3.3</Name>
@@ -134,14 +77,26 @@
       <Project>{3BD61258-31DA-4B09-89C0-4F71FEF5F05A}</Project>
       <Name>HeuristicLab.MainForm-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\HeuristicLab.Parameters\3.3\HeuristicLab.Parameters-3.3.csproj">
-      <Project>{56F9106A-079F-4C61-92F6-86A84C2D84B7}</Project>
-      <Name>HeuristicLab.Parameters-3.3</Name>
+    <ProjectReference Include="..\..\HeuristicLab.Optimization.Views\3.3\HeuristicLab.Optimization.Views-3.3.csproj">
+      <Project>{662B4B15-8F4D-4AE5-B3EB-D91C215F5AF2}</Project>
+      <Name>HeuristicLab.Optimization.Views-3.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Optimization\3.3\HeuristicLab.Optimization-3.3.csproj">
+      <Project>{14AB8D24-25BC-400C-A846-4627AA945192}</Project>
+      <Name>HeuristicLab.Optimization-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.SGA\3.3\HeuristicLab.SGA-3.3.csproj">
+      <Project>{4C3305C4-E440-4EAD-B218-68D77AE51543}</Project>
+      <Name>HeuristicLab.SGA-3.3</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -158,6 +113,6 @@ set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
 call PreBuildEvent.cmd
-SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabParametersViewsPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabParametersViewsPlugin.cs"</PreBuildEvent>
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabSGAViewsPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabSGAViewsPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
