Operator architecture refactoring (#95)  * worked on algorithms
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2857 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -51,6 +51,10 @@
   <ItemGroup>
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
+    <Compile Include="IManipulationOperator.cs" />
+    <Compile Include="ICrossoverOperator.cs" />
+    <Compile Include="IStochasticSolutionCreator.cs" />
+    <Compile Include="IStochasticOperator.cs" />
     <Compile Include="ISolutionCreator.cs" />
     <Compile Include="SingleObjectiveProblem.cs" />
     <Compile Include="ISingleObjectiveProblem.cs" />
