--- a/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
+++ b/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
@@ -89,6 +89,8 @@
     <Compile Include="InversionManipulator.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IPermutationCrossoverOperator.cs" />
+    <Compile Include="IPermutationManipulationOperator.cs" />
     <Compile Include="MaximalPreservativeCrossover.cs" />
     <Compile Include="OrderBasedCrossover.cs" />
     <Compile Include="PartiallyMatchedCrossover.cs" />
