* replaced column `ContactInformation` with `ContactName` and `ContactEmail` in  DB-schema and updated WCF deployment service * regenerated proxy classes * made `PluginDescription` from data contract implement `IPluginDescription` from plugin infrastructure * updated GUI on request by swagner (icons) * fixed problems in the upload plugins control. #860 (Deployment server for plugin installation from web locations)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2860 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -26,7 +26,7 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IUpdate2" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IUpdate" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -43,7 +43,7 @@
                             algorithmSuite="Default" establishSecurityContext="true" />
                     </security>
                 </binding>
-                <binding name="WSHttpBinding_IAdmin2" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IAdmin" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -64,17 +64,17 @@
         </bindings>
         <client>
             <endpoint address="http://localhost:8731/Design_Time_Addresses/HeuristicLab.Services.Deployment/Update/"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdate2"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdate"
                 contract="HeuristicLab.PluginInfrastructure.Advanced.DeploymentService.IUpdate"
-                name="WSHttpBinding_IUpdate2">
+                name="WSHttpBinding_IUpdate">
                 <identity>
                     <dns value="localhost" />
                 </identity>
             </endpoint>
             <endpoint address="http://localhost:8731/Design_Time_Addresses/HeuristicLab.Services.Deployment/Admin/"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAdmin2"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAdmin"
                 contract="HeuristicLab.PluginInfrastructure.Advanced.DeploymentService.IAdmin"
-                name="WSHttpBinding_IAdmin2">
+                name="WSHttpBinding_IAdmin">
                 <identity>
                     <dns value="localhost" />
                 </identity>
