readded references to operator descriptions and updated documentation added OrderCrossover2 to implement the behavior described in our book (this was the behavior of the former OrderCrossover) added CyclicCrossover2 to implement the behavior described in our book (this was the behavior of the former CyclicCrossover) implemented unit tests for the new variants #889
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2871 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
+++ b/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <None Include="HeuristicLabPermutationPlugin.cs.frame" />
     <Compile Include="AbsolutePositionTopologicalCrossover.cs" />
+    <Compile Include="CyclicCrossover2.cs" />
     <Compile Include="IPermutationCreator.cs" />
     <Compile Include="IPermutationOperator.cs" />
     <Compile Include="CosaCrossover.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="IPermutationManipulator.cs" />
     <Compile Include="MaximalPreservativeCrossover.cs" />
     <Compile Include="OrderBasedCrossover.cs" />
+    <Compile Include="OrderCrossover2.cs" />
     <Compile Include="PartiallyMatchedCrossover.cs" />
     <Compile Include="PermutationManipulator.cs" />
     <Compile Include="HeuristicLabPermutationPlugin.cs" />
