Operator architecture refactoring (#95)  * worked on algorithms
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2882 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -51,6 +51,10 @@
   <ItemGroup>
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
+    <Compile Include="Interfaces\IMultiObjectiveSelector.cs" />
+    <Compile Include="Interfaces\ISingleObjectiveSelector.cs" />
+    <Compile Include="Interfaces\IReducer.cs" />
+    <Compile Include="Interfaces\ISelector.cs" />
     <Compile Include="Interfaces\IMultiObjectiveProblem.cs" />
     <Compile Include="Interfaces\IMultiObjectiveEvaluator.cs" />
     <Compile Include="Interfaces\IAlgorithm.cs" />
